--- a/01-reforzamiento/package.json
+++ b/01-reforzamiento/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
